elastic/route-apm-server.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apm-server
  namespace: elastic
spec:
  tls:
    termination: passthrough # Kibana is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: apm-server-apm-http
