elastic/route-elasticsearch.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: elastic
spec:
  tls:
    termination: passthrough # Elasticsearch is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: elasticsearch-es-http
